feat: DB_CONNECTION URI 형식 지원 추가
- SupaliteConfig 인터페이스에 connectionString 필드 추가
- SupaLitePG 클래스 생성자 수정하여 connectionString 지원
- 연결 테스트 메서드 추가
- 테스트 코드 작성 및 실행
- .env.example 파일 업데이트

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
 # PostgreSQL 연결 설정
+# 방법 1: 개별 매개변수 사용
 DB_USER=testuser
 DB_HOST=localhost
 DB_NAME=testdb
 DB_PASS=testpassword
 DB_PORT=5432
 DB_SSL=false
+
+# 방법 2: 연결 문자열(URI) 사용 (위의 개별 매개변수 대신 사용 가능)
+# DB_CONNECTION=postgresql://testuser:testpassword@localhost:5432/testdb
 
 # 주의: 이 파일을 .env로 복사하여 사용하세요
 # cp .env.example .env
