--- a/.npmignore
+++ b/.npmignore
@@ -70,6 +70,7 @@ web_modules/
 
 # Optional npm cache directory
 .npm
+.npm-cache
 
 # Optional eslint cache
 .eslintcache
@@ -99,6 +100,9 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+
+# npm user config (may contain auth tokens)
+.npmrc
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
