--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "supalite",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "A lightweight TypeScript PostgreSQL client with Supabase-style API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "supalite": "bin/supalite"
+  },
   "scripts": {
     "build": "tsc",
     "test": "jest --passWithNoTests",
